// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`chartConfigToControls > should convert secondary xaxis alignment - high 1`] = `
{
  "controls": {
    "secondary_xaxis": {
      "name": {
        "position": "right",
      },
    },
  },
}
`;

exports[`chartConfigToControls > should convert secondary xaxis alignment - low 1`] = `
{
  "controls": {
    "secondary_xaxis": {
      "name": {
        "position": "left",
      },
    },
  },
}
`;

exports[`chartConfigToControls > should convert secondary xaxis alignment - middle 1`] = `
{
  "controls": {
    "secondary_xaxis": {
      "name": {
        "position": "center",
      },
    },
  },
}
`;

exports[`chartConfigToControls > should convert secondary yaxis alignment - high 1`] = `
{
  "controls": {
    "secondary_yaxis": {
      "name": {
        "position": "top",
      },
    },
  },
}
`;

exports[`chartConfigToControls > should convert secondary yaxis alignment - low 1`] = `
{
  "controls": {
    "secondary_yaxis": {
      "name": {
        "position": "bottom",
      },
    },
  },
}
`;

exports[`chartConfigToControls > should convert secondary yaxis alignment - middle 1`] = `
{
  "controls": {
    "secondary_yaxis": {
      "name": {
        "position": "center",
      },
    },
  },
}
`;

exports[`chartConfigToControls > should convert xaxis alignment - high 1`] = `
{
  "controls": {
    "xaxis": {
      "name": {
        "position": "right",
      },
    },
  },
}
`;

exports[`chartConfigToControls > should convert xaxis alignment - low 1`] = `
{
  "controls": {
    "xaxis": {
      "name": {
        "position": "left",
      },
    },
  },
}
`;

exports[`chartConfigToControls > should convert xaxis alignment - middle 1`] = `
{
  "controls": {
    "xaxis": {
      "name": {
        "position": "center",
      },
    },
  },
}
`;

exports[`chartConfigToControls > should convert yaxis alignment - high 1`] = `
{
  "controls": {
    "yaxis": {
      "name": {
        "position": "top",
      },
    },
  },
}
`;

exports[`chartConfigToControls > should convert yaxis alignment - low 1`] = `
{
  "controls": {
    "yaxis": {
      "name": {
        "position": "bottom",
      },
    },
  },
}
`;

exports[`chartConfigToControls > should convert yaxis alignment - middle 1`] = `
{
  "controls": {
    "yaxis": {
      "name": {
        "position": "center",
      },
    },
  },
}
`;
